2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/EmberEntityUserObject.h, src/components/ogre/EmberOgre.cpp, src/components/ogre/EmberPhysicalEntity.cpp: adapt to updated OgreOpcode

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/ogreopcode/*: updated to OgreOpcode 0.0.4

2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: use the APPDATA environment variable since it works on all locales

2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bump version to 0.3.3

2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/XMLModelDefinitionsSerializer.cpp: fixed an error when parsing Vector3
	* src/components/ogre/modeldefinitions/item.modeldef.xml: add a translation offset to the trowel so it sticks up a bit from the ground

2005-10-11  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: added some notion about the size of the download
	* src/components/ogre/GUIManager.*, src/components/ogre/widgets/EntityPicker.*: fixed the signatures of methods recieving MouseMoved events from Input; MSVC want it to be perfect
	* src/components/ogre/widgets/JesusEdit.cpp: use the correct type of parameter when creating new constructions
	* src/components/ogre/model/Model.cpp: reset all particle systems in dtor, but for now disable complete destructions since it will cause a segfault later on


2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/config/ConfigService.cpp: on win32, use the APPDATA environment variable to get the Application Data path
	* src/components/ogre/ogreopcode/opcode/Makefile.am: include headers in dist
	* src/components/ogre/Makefile.am: removed old unused files

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: added setting for inverting the mouse
	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/environment/Sun.h: cleaned up the SigC headers