@@ -1,4 +1,4 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)/src/components/ogre -I$(top_srcdir)/src/components/ogre/SceneManagers/EmberPagingSceneManager/include 
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)/src/components/ogre  -I$(top_builddir)/src -I$(top_srcdir)/src/components/ogre/SceneManagers/EmberPagingSceneManager/include 
 
 
 noinst_LIBRARIES = libEmberPagingSceneManager.a
