@@ -1,6 +1,6 @@
 SUBDIRS = meshtree
 
-INCLUDES = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src
 
 noinst_LIBRARIES = libEnvironment.a
 
