@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src
 METASOURCES = AUTO
 
 noinst_LIBRARIES = libInput.a
