@@ -13,7 +13,7 @@ uninstall-local:
 
 
 
-INCLUDES = -I$(top_srcdir)/src 
+INCLUDES = -I$(top_srcdir)/src  -I$(top_builddir)/src
 METASOURCES = AUTO
 noinst_LIBRARIES = libJesus.a
 noinst_HEADERS = Jesus.h JesusMousePicker.h JesusPickerObject.h \
