@@ -1,5 +1,9 @@
-INCLUDES = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src  -I$(top_builddir)/src
 
 noinst_LIBRARIES = libModel.a
 
-libModel_a_SOURCES = Model.cpp SubModel.cpp SubModelPart.cpp Model.h SubModel.h SubModelPart.h ModelDefinition.cpp ModelDefinition.h ModelDefinitionManager.cpp ModelDefinitionManager.h XMLModelDefinitionSerializer.cpp XMLModelDefinitionSerializer.h
+libModel_a_SOURCES = Model.cpp SubModel.cpp SubModelPart.cpp Model.h SubModel.h \
+	SubModelPart.h ModelDefinition.cpp ModelDefinition.h ModelDefinitionManager.cpp \
+	ModelDefinitionManager.h XMLModelDefinitionSerializer.cpp XMLModelDefinitionSerializer.h 
+#	SimpleModel.cpp IModel.cpp ModelBase.cpp
+#noinst_HEADERS = SimpleModel.h IModel.h ModelBase.h
