@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/src 
+INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src
 
 noinst_LIBRARIES = libConfigService.a
 
